// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptEdit rendering tests PromptEdit - create mode - rendered test 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
    data-slot="card"
    data-testid="prompt-edit"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 border-b pb-6"
      data-slot="card-header"
    >
      <div
        class="text-2xl font-bold text-slate-900"
        data-slot="card-title"
      >
        Neuen Prompt erstellen
      </div>
    </div>
    <div
      class="px-6"
      data-slot="card-content"
    >
      <form
        class="space-y-6"
        data-testid="edit-form"
      >
        <div
          data-testid="basic-info-edit"
        >
          Basic Info Edit
        </div>
        <div
          class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
          data-orientation="horizontal"
          data-slot="separator"
          role="none"
        />
        <div
          data-testid="prompt-content-edit"
        >
          Prompt Content Edit - 
          Create Mode
        </div>
        <div
          class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
          data-orientation="horizontal"
          data-slot="separator"
          role="none"
        />
        <div
          data-testid="follow-up-prompts-edit"
        >
          Follow Ups Edit
        </div>
        <div
          class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
          data-orientation="horizontal"
          data-slot="separator"
          role="none"
        />
        <div
          class="flex items-center justify-end gap-3 pt-2"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3"
            data-slot="button"
            data-testid="cancel-btn"
            type="button"
          >
            Abbrechen
          </button>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
            data-slot="button"
            data-testid="create-btn"
            type="submit"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-save h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
              />
              <path
                d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
              />
              <path
                d="M7 3v4a1 1 0 0 0 1 1h7"
              />
            </svg>
            Prompt erstellen
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`PromptEdit rendering tests PromptEdit - edit mode - rendered test 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
    data-slot="card"
    data-testid="prompt-edit"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 border-b pb-6"
      data-slot="card-header"
    >
      <div
        class="text-2xl font-bold text-slate-900"
        data-slot="card-title"
      >
        Prompt bearbeiten
      </div>
    </div>
    <div
      class="px-6"
      data-slot="card-content"
    >
      <form
        class="space-y-6"
        data-testid="edit-form"
      >
        <div
          data-testid="basic-info-edit"
        >
          Basic Info Edit
        </div>
        <div
          class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
          data-orientation="horizontal"
          data-slot="separator"
          role="none"
        />
        <div
          data-testid="prompt-content-edit"
        >
          Prompt Content Edit - 
          Edit Mode
        </div>
        <div
          class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
          data-orientation="horizontal"
          data-slot="separator"
          role="none"
        />
        <div
          data-testid="follow-up-prompts-edit"
        >
          Follow Ups Edit
        </div>
        <div
          class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
          data-orientation="horizontal"
          data-slot="separator"
          role="none"
        />
        <div
          class="flex items-center justify-end gap-3 pt-2"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3"
            data-slot="button"
            data-testid="cancel-btn"
            type="button"
          >
            Abbrechen
          </button>
          <div
            class="flex"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 rounded-r-none"
              data-slot="button"
              data-testid="save-btn"
              type="submit"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-save h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
                />
                <path
                  d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
                />
                <path
                  d="M7 3v4a1 1 0 0 0 1 1h7"
                />
              </svg>
              Speichern
            </button>
            <div
              data-slot="dropdown-menu"
              data-testid="mock-react-dropdown-menu-root"
            >
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 py-2 has-[>svg]:px-3 rounded-l-none border-l border-primary-foreground/20 px-2"
                data-slot="button"
                data-testid="dropdown-trigger-btn"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-down h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
              <div
                data-testid="mock-react-dropdown-menu-portal"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
